--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import 'sass/main.scss';
+:root {
+  --screen-tablet1: #{$screen-tablet1};
+  --screen-tablet2: #{$screen-tablet2};
+  --screen-tablet3: #{$screen-tablet3};
+}
