--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="app">
-  <app-main-page></app-main-page>
+  <!-- <app-main-page></app-main-page> -->
   <router-outlet></router-outlet>
 </div>
