--- a/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
+++ b/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
@@ -1,3 +1,59 @@
 <div class="functional-card">
-  <button mat-stroked-button (click)="convertCode()">Convert</button>
+  <div class="functional-card__actions">
+    <button
+      mat-stroked-button
+      (click)="convertCode()"
+      class="functional-card__actions__item"
+    >
+      Convert
+    </button>
+    <button
+      mat-stroked-button
+      (click)="download()"
+      class="functional-card__actions__item"
+    >
+      Download
+    </button>
+  </div>
+  <div [formGroup]="form" class="functional-card__form">
+    <mat-form-field appearance="fill" class="functional-card__form__item">
+      <mat-label>Tag Manager URL</mat-label>
+      <input matInput formControlName="tagManagerUrl" />
+      <mat-icon
+        matSuffix
+        matTooltip="e.g., https://tagmanager.google.com/#/container/accounts/0000000000/containers/0000000/workspaces/1000282"
+        >help_outline</mat-icon
+      >
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="functional-card__form__item">
+      <mat-label>Container Name</mat-label>
+      <input matInput formControlName="containerName" />
+      <mat-icon
+        matSuffix
+        matTooltip="go to https://tagmanager.google.com/#/home and copy the container name"
+        >help_outline</mat-icon
+      >
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="functional-card__form__item">
+      <mat-label>GTM ID</mat-label>
+      <input matInput formControlName="gtmId" />
+      <mat-icon matSuffix matTooltip="e.g., GTM-WJ6N3XX">help_outline</mat-icon>
+    </mat-form-field>
+  </div>
+  <button
+    #trigger="cdkOverlayOrigin"
+    cdkOverlayOrigin
+    mat-raised-button
+    (click)="setMeasurementId()"
+    class="functional-card__measurement"
+    [color]="isSettingMeasurementId ? 'success' : ''"
+  >
+    Set Measurement ID
+  </button>
+  <app-measurement-id-table
+    [isOpen]="isOpen"
+    [trigger]="trigger"
+    (closeEvent)="closeLoginInterface()"
+    (formData)="handleMeasurementIdSettingFormData($event)"
+  />
 </div>
