--- a/src/app/gtm-config-generator/components/functional-card/functional-card.component.scss
+++ b/src/app/gtm-config-generator/components/functional-card/functional-card.component.scss
@@ -1,9 +1,43 @@
+@use '@angular/material' as mat;
 @import '@angular/material/theming';
+@import '../../../app.component.scss';
 
 .functional-card {
   @include mat-elevation(4);
-  display: flex;
-  align-items: stretch;
   width: 100%;
-  height: inherit;
+  height: 100%;
+  padding: 30px 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  &__actions {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 10px;
+    width: 100%;
+
+    &__item {
+      font-size: $font-size-lg;
+      width: 100%;
+
+    }
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    @include mat.all-component-densities(-1);
+  }
+
+  &__measurement {
+    width: 100%;
+  }
+}
+
+// to match the form field height
+.mat-mdc-outlined-button.mat-mdc-button-base {
+  height: 50px;
 }
