Chores: Components and Content 1. Move components into the components folder. 2. Build components regarding gtm-confg-generator: article and footer.

--- a/src/app/gtm-config-generator/components/main-page/main-page.component.html
+++ b/src/app/gtm-config-generator/components/main-page/main-page.component.html
@@ -5,7 +5,7 @@
   <div class="main-page__board">
     <div class="main-page__board__item main-page__editor">
       <app-editor
-        content="Paste your JSON here..."
+        content="{{ exampleInputJson | json }}"
         [editorExtension]="'inputJson'"
       />
     </div>
@@ -19,4 +19,8 @@
       />
     </div>
   </div>
+  <div class="main-page__article">
+    <app-article />
+  </div>
 </div>
+<app-footer></app-footer>
