--- a/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
+++ b/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
@@ -4,6 +4,7 @@
       mat-stroked-button
       (click)="convertCode()"
       class="functional-card__actions__item"
+      [disabled]="!form.valid"
     >
       Convert
     </button>
@@ -11,6 +12,7 @@
       mat-stroked-button
       (click)="download()"
       class="functional-card__actions__item"
+      [disabled]="!form.valid"
     >
       Download
     </button>
