--- a/src/app/gtm-config-generator/components/functional-card/functional-card.component.scss
+++ b/src/app/gtm-config-generator/components/functional-card/functional-card.component.scss
@@ -9,7 +9,6 @@
   padding: 30px 30px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   
   &__actions {
     display: flex;
@@ -29,7 +28,13 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    margin: 0;
     @include mat.all-component-densities(-1);
+  }
+
+  &__include-video {
+    margin-left: -9px;
+    margin-bottom: 20px;
   }
 
   &__measurement {
@@ -40,4 +45,8 @@
 // to match the form field height
 .mat-mdc-outlined-button.mat-mdc-button-base {
   height: 50px;
+}
+
+.mat-mdc-checkbox label {
+  font-size: $font-size-xl;
 }
