--- a/src/app/gtm-config-generator/components/main-page/main-page.component.scss
+++ b/src/app/gtm-config-generator/components/main-page/main-page.component.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: stretch;
     gap: 40px;
-
+    margin-bottom: 30px;
     &__item {
       flex-grow: 1;
     }
