Fix: 1. Empty input editor won't be able to convert. 2. Refactor the fixJsonString function out to be utilities.

--- a/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
+++ b/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
@@ -4,7 +4,11 @@
       mat-stroked-button
       (click)="convertCode()"
       class="functional-card__actions__item"
-      [disabled]="!form.valid"
+      [disabled]="
+        !form.valid ||
+        (this.editorService.editor$.inputJson | async)?.state?.doc?.toString()
+          ?.length === 0
+      "
     >
       Convert
     </button>
@@ -12,7 +16,11 @@
       mat-stroked-button
       (click)="download()"
       class="functional-card__actions__item"
-      [disabled]="!form.valid"
+      [disabled]="
+        !form.valid ||
+        (this.editorService.editor$.inputJson | async)?.state?.doc?.toString()
+          ?.length === 0
+      "
     >
       Download
     </button>
