Lint 1. Introduct error dialog to show error message to users. 2. Add a JSON linter for the input editor. 3. Placeholder informs users that JS object could be possible to be used.

--- a/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
+++ b/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
@@ -58,7 +58,7 @@
     class="functional-card__measurement"
     [color]="isSettingMeasurementId ? 'success' : ''"
   >
-    Set Measurement ID
+    Set Measurement ID (Optional)
   </button>
   <app-measurement-id-table
     [isOpen]="isOpen"
