--- a/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
+++ b/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
@@ -14,13 +14,8 @@
     </button>
     <button
       mat-stroked-button
-      (click)="download()"
+      (click)="onUpload()"
       class="functional-card__actions__item"
-      [disabled]="
-        !form.valid ||
-        (this.editorService.editor$.inputJson | async)?.state?.doc?.toString()
-          ?.length === 0
-      "
     >
       Download
     </button>
