Enable file uploading 1. Users can upload JSON file for easier conversion. 2. Fix the onDownload() and onClipBoard that they should be put into the button elements instead of mat-icon.

--- a/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
+++ b/src/app/gtm-config-generator/components/functional-card/functional-card.component.html
@@ -17,7 +17,7 @@
       (click)="onUpload()"
       class="functional-card__actions__item"
     >
-      Download
+      Upload
     </button>
   </div>
   <div [formGroup]="form" class="functional-card__form">
