Read XLSX file 1. Add sheetjs dependency for reading XLSX file. 2. Add and use web worker to deal with tense table computation works. 3. Refactor fixJsonString and add related tests. 4. UI layout and adjustments.

--- a/src/app/gtm-config-generator/components/main-page/main-page.component.html
+++ b/src/app/gtm-config-generator/components/main-page/main-page.component.html
@@ -2,6 +2,7 @@
   <div class="main-page__title">
     <h1>Google Tag Manager Config Generator</h1>
   </div>
+
   <div class="main-page__board">
     <div class="main-page__board__item main-page__editor">
       <app-editor
@@ -19,6 +20,9 @@
       />
     </div>
   </div>
+  <mat-sidenav-container>
+    <app-xlsx-sidenav-form></app-xlsx-sidenav-form>
+  </mat-sidenav-container>
   <div class="main-page__article">
     <app-article />
   </div>
