--- a/src/app/gtm-config-generator/components/xlsx-sidenav-form/xlsx-sidenav-form.component.html
+++ b/src/app/gtm-config-generator/components/xlsx-sidenav-form/xlsx-sidenav-form.component.html
@@ -19,11 +19,28 @@
       </div>
       <div>
         <button
+          *ngIf="!isPreviewing"
           mat-raised-button
-          (click)="sidenav.toggle(); retrieveSpecsFromSource()"
+          (click)="
+            sidenav.toggle();
+            retrieveSpecsFromSource();
+            isPreviewing = !isPreviewing
+          "
           color="primary"
         >
           Save
+        </button>
+        <button
+          *ngIf="isPreviewing"
+          mat-raised-button
+          (click)="
+            previewData();
+            isPreviewing = !isPreviewing;
+            isRenderingJson = !isRenderingJson
+          "
+          color="warn"
+        >
+          Preview
         </button>
       </div>
     </div>
@@ -84,9 +101,16 @@
                   {{ column.replace("__EMPTY", "empty_title") }}
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element[column] }}
+                  <pre *ngIf="isRenderingJson"
+                    >{{ element[column] | json }} </pre
+                  >
+                  <div *ngIf="!isRenderingJson">
+                    {{ element[column] }}
+                  </div>
                 </td>
-              </ng-container>
+                ></ng-container
+              >
+
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
             </table>
