--- a/src/app/gtm-config-generator/components/xlsx-sidenav-form/xlsx-sidenav-form.component.scss
+++ b/src/app/gtm-config-generator/components/xlsx-sidenav-form/xlsx-sidenav-form.component.scss
@@ -7,8 +7,17 @@
       padding: 0 5rem;
       overflow: hidden;
 
-      &__card {
+      &__cards {
         margin: 3rem 0;
+        display: flex;
+        gap: 2rem;
+
+        &__card {
+          flex: 1 1 0;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
       }
     }
   }
@@ -52,8 +61,8 @@
     &__field {
       display: flex;
       flex-direction: column;
-      width: 30%;
-      min-width: 100px;
+      min-width: 200px;
+      max-width: 40%;
 
       &__header {
         color: #6b7280;
