--- a/src/app/components/bar/bar.component.scss
+++ b/src/app/components/bar/bar.component.scss
@@ -2,7 +2,7 @@
 @import '../../app.component.scss';
 .bar {
   width: 100vw;
-  padding: 10px;
+  padding: 1rem;
 
   &__menu {
     &__list {
@@ -12,8 +12,8 @@
 
       & > li {
         list-style: none;
-        margin: 0 10px;
-        color: $back;
+        margin: 0 1rem;
+        color: $text-light;
       }
     }
   }
