--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  background-color: $back;
+  background-color: $back-light;
   color: $text;
   width: 100%;
   height: 100%;
@@ -27,17 +27,4 @@ a {
   &:hover {
     text-decoration: underline
   }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-blockquote {
-  position: relative;
-  margin: 0;
-  color: $heading;
-  font-family: $font-family-sans-serif;
 }
