fix: GTM parameters 1. Refator and reuse functions to simplify configuration composition. 2. Pass configuration name as a parameter for future usage, mainly avoid naming conflict. 3. Fix template bug.

--- a/src/app/feature-modules/gtm-config-generator/components/functional-card/functional-card.component.html
+++ b/src/app/feature-modules/gtm-config-generator/components/functional-card/functional-card.component.html
@@ -6,8 +6,9 @@
       class="functional-card__actions__item"
       [disabled]="
         !form.valid ||
-        (this.editorService.editor$.inputJson | async)?.state?.doc?.toString()
-          ?.length === 0
+        (
+          this.editorFacadeService.getInputJsonContent() | async
+        )?.state?.doc?.toString()?.length === 0
       "
     >
       Convert
