Enable Customized Configuration Name Add another expansion panel for entering the configuration tag's name.

--- a/src/app/feature-modules/gtm-config-generator/components/functional-card/functional-card.component.html
+++ b/src/app/feature-modules/gtm-config-generator/components/functional-card/functional-card.component.html
@@ -46,5 +46,5 @@
       <mat-icon matSuffix matTooltip="e.g., GTM-WJ6N3XX">help_outline</mat-icon>
     </mat-form-field>
   </div>
-  <app-advanced-expansion-panel></app-advanced-expansion-panel>
+  <app-advanced-expansion-panel #setupAccordion></app-advanced-expansion-panel>
 </div>
