--- a/src/app/feature-modules/gtm-config-generator/components/advanced-expansion-panel/advanced-expansion-panel.component.scss
+++ b/src/app/feature-modules/gtm-config-generator/components/advanced-expansion-panel/advanced-expansion-panel.component.scss
@@ -28,5 +28,15 @@
          transform: rotate(90deg) !important;
        }
      }
+
+     .mat-expansion-panel-header-title {
+       flex-grow: 2;
+     }
+
+      .mat-expansion-panel-header-description {
+        display: flex;
+        justify-content: flex-end;
+        flex-grow: 1;
+      }
    }
  }
