--- a/src/app/feature-modules/gtm-config-generator/components/xlsx-sidenav/xlsx-sidenav.component.scss
+++ b/src/app/feature-modules/gtm-config-generator/components/xlsx-sidenav/xlsx-sidenav.component.scss
@@ -5,7 +5,8 @@
     &__content {
       background-color: rgba(217, 217, 222, 0.307);
       padding: 0 5rem;
-      overflow: hidden;
+      padding-bottom: 10rem;
+      // overflow: hidden;
 
       &__cards {
         margin: 3rem 0;
