--- a/src/app/feature-modules/gtm-config-generator/components/main-page/main-page.component.html
+++ b/src/app/feature-modules/gtm-config-generator/components/main-page/main-page.component.html
@@ -14,10 +14,7 @@
       <app-functional-card />
     </div>
     <div class="main-page__board__item main-page__editor">
-      <app-editor
-        content="your gtm configuration"
-        [editorExtension]="'outputJson'"
-      />
+      <app-editor [editorExtension]="'outputJson'" />
     </div>
   </div>
   <mat-sidenav-container>
