--- a/src/app/components/functional-card/functional-card.component.scss
+++ b/src/app/components/functional-card/functional-card.component.scss
@@ -1,6 +1,6 @@
 @use '@angular/material' as mat;
 @import '@angular/material/theming';
-@import '../../app.component.scss';
+@import '../../../styles.scss';
 
 .functional-card {
   @include mat-elevation(4);
